<resources>
    <string name="app_name">TicTacToe</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>

    <string name="score_start">Player: 0 Tie: 0 Android: 0</string>

    <string name="information_space">Info</string>
    <string name="Human_turn">You play first!</string>
    <string name="Computer_turn">It\'s Android\'s turn.</string>
    <string name="Human_new_turn">It\'s your turn!</string>
    <string name="Tie">It\'s a tie!</string>
    <string name="Human_wins">You won!</string>
    <string name="Computer_wins">Android won!</string>

    <string name="New_game">New Game!</string>
    <string name="difficulty">Difficulty</string>
    <string name="quit">Quit</string>
    <string name="about">About…</string>

    <string name="dif_easy">Easy</string>
    <string name="dif_hard">Hard</string>
    <string name="dif_expert">Expert</string>

    <string name="OK">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="quit_question">Quit game?</string>
    <string name="app_description">TicTacToe game , small game to pass some free time! be careful with the difficult, Experts is literally an expert</string>
    <string name="app_author_ext">Done By : Brayan Portela</string>

    <string name="sound">Sound Mode</string>
    <string name="sound_on">sound ON</string>
    <string name="sound_off">Sound OFF</string>
    <string name="reset_score">Reset scores</string>
    <string name="online_mode">Online Mode</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="match_prompt">Ready for an online match?</string>
    <string name="nickname_prompt">Enter your nickname</string>
    <string name="begin_game_prompt">Let\'s Begin</string>
    <string name="player_two_space">Player Two</string>
    <string name="player_one_space">Player One</string>

</resources>