<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ModeScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/online_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_mode"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/offline_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>