<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PlayerName">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_prompt"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nickname_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nickname_prompt"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        android:autofillHints="Player X"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_online"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/begin_game_prompt"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>